<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/small"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/small">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/appTvTitle"
                style="@style/TextSemiBoldSizeLarge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/adp_title"
                android:textColor="@color/colorNormalText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tiny"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/TextSemiBoldSizeMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rupees"
                    android:textColor="@color/colorDebit" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/appTvCreditAmount"
                    style="@style/TextRegularSizeMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/adp_credit_amount"
                    android:textColor="@color/colorDebit" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/appTvDescription"
                style="@style/TextSemiBoldSizeRegular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/tiny"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/adp_description"
                android:textColor="@color/colorHintEditText" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/appTvDateTime"
                style="@style/TextRegularSizeMedium"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/tiny"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="right"
                android:maxLines="1"
                android:text="@string/adp_date_time"
                android:textColor="@color/colorHintEditText" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/extraTinyLine"
        android:background="@color/colorLine" />
</LinearLayout>



