<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/custom_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/medium">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/appEdtName"
                    style="@style/styleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/medium"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName"
                    android:maxLines="1" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/appEdtAmount"
                    style="@style/styleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/medium"
                    android:hint="@string/hint_amount"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/appBtnAdd"
                    style="@style/ButtonTheme"
                    android:layout_marginRight="@dimen/small"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/huge"
                    android:text="@string/btn_add" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
