<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:weightSum="1.5"
            android:orientation="horizontal"
            android:padding="@dimen/small">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/TextSemiBoldSizeMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rupees"
                    android:textColor="@color/colorVerified" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/appTvCreditAmount"
                    style="@style/TextRegularSizeMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/tiny"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/credit_amount"
                    android:textColor="@color/colorVerified" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/TextSemiBoldSizeMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rupees"
                    android:textColor="@color/colorDebit" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/appTvDebitAmount"
                    style="@style/TextRegularSizeMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/tiny"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/debit_amount"
                    android:textColor="@color/colorDebit" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/TextSemiBoldSizeMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rupees"
                    android:textColor="@color/colorTransaction" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/appTvTransactionAmount"
                    style="@style/TextSemiBoldSizeMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/tiny"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/transaction_amount"
                    android:textColor="@color/colorTransaction" />

            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@color/colorWhite"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/colorPrimary"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/colorPrimary"
            app:tabTextAppearance="@style/TabLayoutStyle"
            app:tabTextColor="@color/colorNormalText" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</LinearLayout>